--- a/maromba-web/index.html
+++ b/maromba-web/index.html
@@ -5,11 +5,9 @@
   <meta charset="UTF-8" />
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,600,0,0" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Sora:wght@100;200;300;400;500;600;700;800&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="/styles.css" />
   <link rel="icon" href="/src/assets/img/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Maromba</title>
